--- a/morgan_freeman/bio_perso.html
+++ b/morgan_freeman/bio_perso.html
@@ -1,14 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+
     <title>Biographie personelle</title>
-    <div bandeau><h1>StarBio</h1></div>
 
 </head>
 <body>
+    <a href="../accueil.html"><h1>StarBio</h1></a>
+    <div><h2>Biographie personelle</h2></div>
+    <!-- <a href="bio_perso.html">Biographie personelle</a>
+    <a href="bio_pro.html">Biographie professionnelle</a>
+    <a href="liste_oeuvres.html">Ses oeuvres</a>
+    <a href="galerie.html">Galerie de photos</a> -->
+    
+    <nav> <!-- /*menu déroulant*/ -->
+        <ul>
+          <li class="menu-deroulant">
+            <a href="#">Morgan Freeman</a>
+            <ul class="sous-menu">
+              <li><a href="bio_perso.html">Biographie personelle</a></li>
+              <li><a href="bio_pro.html">Biographie professionnelle</a></li>
+              <li><a href="liste_oeuvres.html">Oeuvres </a></li>
+              <li><a href="galerie.html">Galerie</a></li>
+            </ul>
+          </li>
+          <li class="menu-deroulant">
+            <a href="#">Melissa</a>
+            <ul class="sous-menu">
+              <li><a href="#">Bio</a></li>
+              <li><a href="#">Vie</a></li>
+            </ul>
+          </li>
+          <!-- <li><a href="#">À propos</a></li>
+          <li><a href="#">Contactez-nous</a></li> -->
+        </ul>
+      </nav>
+
+
     <div>
         <h2>Biographie personelle</h2>
         <p>Morgan Freeman est un acteur, réalisateur et producteur de cinéma américain. Il est né le 1er juin 1937 (83 ans), à Memphis  aux États-Unis dans une fratrie de quatre enfants. Ses parents sont Mayme Edna Revere (1912-2000) et Morgan Porterfield Freeman (1915-1961), ancien combattant de la Seconde Guerre mondiale2, mort d'une cirrhose du foie lorsqu'il a 46 ans. C’est sa grand-mère qui l’élève, dans le Mississippi, il y passera toute son enfance, jusqu’à la mort de celle-ci.
