--- a/morgan_freeman/bio_pro.html
+++ b/morgan_freeman/bio_pro.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
 
     <title>Biographie professionnelle</title>
 
 </head>
 <body>
-    <a href="../accueil.html"><h1>StarBio</h1></a>
+    <a href="../index.html"><h1>StarBio</h1></a>
     <div><h2>Biographie professionelle</h2></div>
     <!-- <a href="bio_perso.html">Biographie personelle</a>
     <a href="bio_pro.html">Biographie professionnelle</a>
