--- a/morgan_freeman/bio_pro.html
+++ b/morgan_freeman/bio_pro.html
@@ -10,14 +10,39 @@
 
 </head>
 <body>
-    <a href="../index.html"><h1>StarBio</h1></a>
+
+  <div class="bandeau">
+    <a href="../index.html"><h1>STARBIO</h1></a>
     <div><h2>Biographie professionelle</h2></div>
+    <nav> <!-- /*menu déroulant*/ -->
+      <ul>
+        <li class="menu-deroulant">
+          <a href="#">Morgan Freeman</a>
+          <ul class="sous-menu">
+            <li><a href="bio_perso.html">Biographie personelle</a></li>
+            <li><a href="bio_pro.html">Biographie professionnelle</a></li>
+            <li><a href="liste_oeuvres.html">Oeuvres </a></li>
+            <li><a href="galerie.html">Galerie</a></li>
+          </ul>
+        </li>
+        <li class="menu-deroulant">
+          <a href="#">Melissa</a>
+          <ul class="sous-menu">
+            <li><a href="#">Bio</a></li>
+            <li><a href="#">Vie</a></li>
+          </ul>
+        </li>
+      </ul>
+    </nav>
+  </div>
+    <!-- <a href="../index.html"><h1>StarBio</h1></a>
+    <div><h2>Biographie professionelle</h2></div> -->
     <!-- <a href="bio_perso.html">Biographie personelle</a>
     <a href="bio_pro.html">Biographie professionnelle</a>
     <a href="liste_oeuvres.html">Ses oeuvres</a>
     <a href="galerie.html">Galerie de photos</a> -->
 
-    <nav> <!-- /*menu déroulant*/ -->
+    <!-- <nav> /*menu déroulant*/
         <ul>
           <li class="menu-deroulant">
             <a href="#">Morgan Freeman</a>
@@ -35,12 +60,9 @@
               <li><a href="#">Vie</a></li>
             </ul>
           </li>
-          <!-- <li><a href="#">À propos</a></li>
-          <li><a href="#">Contactez-nous</a></li> -->
         </ul>
-      </nav>
+      </nav> -->
 
-    <h2>Biographie professionnelle</h2>
         <p>Morgan Freeman commence sa carrière de comédien à 30 ans, à l'affiche de <i>Hello Dolly !</i> à broadway et se fait remarquer sur scène pour l'interprétation dans la pièce <i>The nigger loves</i> avec Stacy Keach ainsi que Viveca Lindfors. Grâce à la série télévisée <i> The electric company</i>, il se fait connaître par le public américain ; il incarne le personnage d'Easy reader pendant six ans.
         </p>
         <img src="./img/morgan_1967.jpg" alt="morgan en 1967">
