--- a/morgan_freeman/bio_perso.html
+++ b/morgan_freeman/bio_perso.html
@@ -11,40 +11,40 @@
 </head>
 <body>
   <div class="bandeau">
-    <a href="../index.html"><h1>STARBIO</h1></a>
+    <a class="lien_menu" href="../index.html"><h1>STARBIO</h1></a>
     <div><h2>Biographie personelle</h2></div>
     <nav> <!-- /*menu déroulant*/ -->
       <ul>
         <li class="menu-deroulant">
           <a href="#">Morgan Freeman</a>
           <ul class="sous-menu">
-            <li><a href="bio_perso.html">Biographie personelle</a></li>
-            <li><a href="bio_pro.html">Biographie professionnelle</a></li>
-            <li><a href="liste_oeuvres.html">Oeuvres </a></li>
-            <li><a href="galerie.html">Galerie</a></li>
+            <li><a class="lien_menu" href="bio_perso.html">Biographie personelle</a></li>
+            <li><a class="lien_menu" href="bio_pro.html">Biographie professionnelle</a></li>
+            <li><a class="lien_menu" href="liste_oeuvres.html">Oeuvres </a></li>
+            <li><a class="lien_menu" href="galerie.html">Galerie</a></li>
           </ul>
         </li>
         <li class="menu-deroulant">
-          <a href="#">Melissa</a>
+          <a class="lien_menu" href="#">Melissa</a>
           <ul class="sous-menu">
-            <li><a href="#">Bio</a></li>
-            <li><a href="#">Vie</a></li>
+            <li><a class="lien_menu" href="#">Bio</a></li>
+            <li><a class="lien_menu" href="#">Vie</a></li>
           </ul>
         </li>
       </ul>
     </nav>
   </div>
 
-    <div class="container">
-        <p>
+  <div class="container">
+      <p>
           Morgan Freeman est un acteur, réalisateur et producteur de cinéma américain. Il est né le 1er juin 1937 (83 ans), à Memphis  aux États-Unis dans une fratrie de quatre enfants. Ses parents sont Mayme Edna Revere (1912-2000) et Morgan Porterfield Freeman (1915-1961), ancien combattant de la Seconde Guerre mondiale, mort d'une cirrhose du foie lorsqu'il a 46 ans. C’est sa grand-mère qui l’élève, dans le Mississippi, il y passera toute son enfance, jusqu’à la mort de celle-ci.
-        </p>
+      </p>
 
-        <p>
+      <p>
           Il découvre le théâtre à l’école à l’âge de 10 ans.  A 18 ans, il est diplômé du lycée de greenwood. Entre 1955 et 1959, il s’engage dans la United State Air Force en tant que mécanicien. A la fin de son service militaire, il s’installe en Californie étudier la danse et l’art dramatique au Los Angeles City College. Morgan débute dans une troupe de danseurs et musiciens de San Francisco. 
-        </p>
-        <a href="./img/morgan_avant_apres.jpg"><img class="image_bio" src="./img/morgan_avant_apres.jpg" title="Morgan freeman dans sa jeunesse, et aujourd'hui" alt="Morgan freeman, avant/après" width="200px"></a>
-        </div>
+      </p>
+      <a href="./img/morgan_avant_apres.jpg"><img class="image_bio" src="./img/morgan_avant_apres.jpg" title="Morgan freeman dans sa jeunesse, et aujourd'hui" alt="Morgan freeman, avant/après" width="200px"></a>
+  </div>
     
 </body>
 </html>
