ajout de photos dans /img et liens vers ces images de films dans la bio professionnelle.

--- a/morgan_freeman/bio_pro.html
+++ b/morgan_freeman/bio_pro.html
@@ -38,17 +38,17 @@
 
   <div class="container">
     <p>
-      Morgan Freeman commence sa carrière de comédien à 30 ans, à l'affiche de <i>Hello Dolly !</i> à broadway et se fait remarquer sur scène pour l'interprétation dans la pièce <i>The nigger loves</i> avec Stacy Keach ainsi que Viveca Lindfors. Grâce à la série télévisée <i> The electric company</i>, il se fait connaître par le public américain ; il incarne le personnage d'Easy reader pendant six ans.
+      Morgan Freeman commence sa carrière de comédien à 30 ans, à l'affiche de <i>Hello Dolly !</i> à broadway et se fait remarquer sur scène pour l'interprétation dans la pièce <i>The nigger loves</i> avec Stacy Keach ainsi que Viveca Lindfors. Grâce à la série télévisée <a class="lien_affiche" href="./img/electric_compagny.jpg">The electric compagny</a>, il se fait connaître par le public américain ; il incarne le personnage d'Easy reader pendant six ans.
     </p>
 
     <a href="./img/morgan_1967.jpg"><img class="image_bio" src="./img/morgan_1967.jpg" alt="morgan en 1967" width="200px">
     </a>
     <p>
-      Morgan commence le cinéma bien plus tard. En 1987, il est récompensé pour le rôle de Fast Black dans <i>La rue</i>. En 1990, le film <a class="lien_affiche" href="./img/miss_daisy_et_son_chauffeur.jpg">Miss Daisy et son chauffeur</a>  lui offre un Golden Globe, un Ours d'argent ainsi qu' une nomination aux Oscars. Freeman joue ensuite dans des films de grands réalisateurs, comme dans <i>Robin des bois, prince des voleurs</i> de Kevin Reynolds, mais aussi dans les films de son ami Clint Eastwood : <i>Impitoyable</i> par exemple.
+      Morgan commence le cinéma bien plus tard. En 1987, il est récompensé pour le rôle de Fast Black dans <i>La rue</i>. En 1990, le film <a class="lien_affiche" href="./img/miss_daisy_et_son_chauffeur.jpg">Miss Daisy et son chauffeur</a>  lui offre un Golden Globe, un Ours d'argent ainsi qu' une nomination aux Oscars. Freeman joue ensuite dans des films de grands réalisateurs, comme dans <a class="lien_affiche" href="./img/robindesbois.jpg">Robin des bois, prince des voleurs</a> de Kevin Reynolds, mais aussi dans les films de son ami Clint Eastwood : <i>Impitoyable</i> par exemple.
     </p>
     
     <p>
-      Morgan Freeman incarne souvent des personnages sages, déterminés, calmes, réfléchis. Il joue le juge en 1991 dans <i>Le bûcher des vanités</i>, un prisonnier exemplaire dans <i>Les évadés</i>, un détective hors pair dans <i> Seven</i>, Dieu dans <i>Bruce tout puissant</i>, l' animateur de télévision qui démonte les tours de magie, Thaddeus Bradley dans <i>Insaisissables</i>.
+      Morgan Freeman incarne souvent des personnages sages, déterminés, calmes, réfléchis. Il joue le juge en 1991 dans <i>Le bûcher des vanités</i>, un prisonnier exemplaire dans <i>Les évadés</i>, un détective hors pair dans <i> Seven</i>, Dieu dans <a class="lien_affiche" href="./img/brucetoutpuissant.jpg">Bruce tout puissant</a>, l' animateur de télévision qui démonte les tours de magie, Thaddeus Bradley dans <i>Insaisissables</i>.
     </p>
    
     <p>
@@ -56,7 +56,7 @@
     </p>
     
     <p>
-      Toutefois, Morgan Freeman s'essaye aussi dans d'autres genres de films. Il joue dans les comédies <i>Evan tout puissant</i> en 2003, il incarne un retraité qui prépare un casse dans <i>Braquage à l'ancienne</i>, dans la comédie d'action <i>RED</i> en 2010. On voit aussi jouer Freeman dans des blockbusters : il joue le rôle de Lucius Fox dans <i>Batman : origins</i> en 2003, puis en 2010 dans <i>The dark knight</i> et en 2012 dans <i>The Dark Knight Rises</i>. On le trouve aussi dans <i>Wanted : choisis ton destin</i>. Freeman incarne le Docteur Mc Carthy, spécialiste des animaux marins dans le film pour enfants <i>Winter le dauphin</i>.
+      Toutefois, Morgan Freeman s'essaye aussi dans d'autres genres de films. Il joue dans les comédies <i>Evan tout puissant</i> en 2003, il incarne un retraité qui prépare un casse dans <i>Braquage à l'ancienne</i>, dans la comédie d'action <a class="lien_affiche" href="./img/red.jpg">RED</a> en 2010. On voit aussi jouer Freeman dans des blockbusters : il joue le rôle de Lucius Fox dans <a class="lien_affiche" href="./img/darknight.jpg">Batman : origins</a> en 2003, puis en 2010 dans <i>The dark knight</i> et en 2012 dans <i>The Dark Knight Rises</i>. On le trouve aussi dans <i>Wanted : choisis ton destin</i>. Freeman incarne le Docteur Mc Carthy, spécialiste des animaux marins dans le film pour enfants <i>Winter le dauphin</i>.
     </p>
 
 
