--- a/pierre_niney/bio_perso_p.html
+++ b/pierre_niney/bio_perso_p.html
@@ -1,12 +1,42 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
-    <title>Biographie personnelle de Pierre Niney</title>
-    <link rel="stylesheet" href="morgan_freeman/style.css" type="text/css" media="screen" > <!-- à changer -->
-	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../style.css">
+    <title>Biographie personelle de Pierre Niney</title>
 </head>
 
 <body>
+	<div class="bandeau">
+		<a class="lien_menu" href="../index.html"> <h1> STARBIO </h1> </a>
+		<div> <h2> Biographie personelle de Pierre Niney </h2> </div>
+		<nav> <!-- /*menu déroulant*/ -->
+		<ul>
+			<li class="menu-deroulant">
+				<a href="#">Morgan Freeman</a>
+				<ul class="sous-menu">
+					<li><a class="lien_menu" href="../morgan_freeman/bio_perso.html">Biographie personelle</a></li>
+					<li><a class="lien_menu" href="../morgan_freeman/bio_pro.html">Biographie professionnelle</a></li>
+					<li><a class="lien_menu" href="../morgan_freeman/liste_oeuvres.html">Oeuvres </a></li>
+					<li><a class="lien_menu" href="../morgan_freeman/galerie.html">Galerie</a></li>
+				</ul>
+			</li>
+			<li class="menu-deroulant">
+				<a class="lien_menu" href="#">Pierre Niney</a>
+				<ul class="sous-menu">
+					<li><a class="lien_menu" href="bio_perso_p.html">Biographie personnelle</a></li>
+					<li><a class="lien_menu" href="bio_pro_p.html"> Biographie professionnelle</a></li>
+					<li><a class="lien_menu" href="liste_oeuvres.html"> Oeuvres </a></li>
+				</ul>
+			</li>
+		</ul>
+		</nav>
+	</div>
+	
+	<div class="container">
+	
 	<h2> Enfance et adolescence </h2>
 	<p>
 		Pierre Niney est né le 13 mars 1989 à Boulogne-Billancourt. Il s'intéresse très jeune à la comédie. Il prend des cours de théâtre à 11 ans.
@@ -14,6 +44,7 @@
 		Il est admis à la classe libre du cours Florent et y étudie pendant deux ans.
 		Ensuite il est pris au Conservatoire national supérieur d'art dramatique de Paris.
 	</p>
+	
 	
 	<h2> Famille </h2>
 	<p>
@@ -27,6 +58,6 @@
 		Pierre Niney est marié à Natasha Andrews, une actrice australienne. 
 		Ils ont ensemble deux filles. 
 	</p>
-	
+	</div>
 </body>
 </head>
