--- a/pierre_niney/bio_pro_p.html
+++ b/pierre_niney/bio_pro_p.html
@@ -1,14 +1,41 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
-    <title>Biographie professionnelle de Pierre Niney</title>
-    <link rel="stylesheet" href="morgan_freeman/style.css" type="text/css" media="screen" > <!-- à changer -->
-	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../style.css">
+    <title>Biographie professionnelle de Pierre Niney </title>
 </head>
 
 <body>
-	<h1> Biographie professionnelle </h1>
+	<div class="bandeau">
+    <a class="lien_menu" href="../index.html"><h1>STARBIO</h1></a>
+    <div><h2> Biographie professionnelle de Pierre Niney </h2></div>
+    <nav> <!-- /*menu déroulant*/ -->
+		<ul>
+			<li class="menu-deroulant">
+			<a href="#">Morgan Freeman</a>
+			<ul class="sous-menu">
+				<li><a class="lien_menu" href="../morgan_freeman/bio_perso.html">Biographie personelle</a></li>
+				<li><a class="lien_menu" href="../morgan_freeman/bio_pro.html">Biographie professionnelle</a></li>
+				<li><a class="lien_menu" href="../morgan_freeman/liste_oeuvres.html">Oeuvres </a></li>
+				<li><a class="lien_menu" href="../morgan_freeman/galerie.html">Galerie</a></li>
+			</ul>
+			</li>
+			<li class="menu-deroulant">
+			<a class="lien_menu" href="#">Pierre Niney</a>
+			<ul class="sous-menu">
+				<li><a class="lien_menu" href="bio_perso_p.html">Biographie personnelle</a></li>
+				<li><a class="lien_menu" href="bio_pro_p.html"> Biographie professionnelle</a></li>
+				<li><a class="lien_menu" href="liste_oeuvres.html"> Oeuvres </a></li>
+			</ul>
+			</li>
+		</ul>
+    </nav>
+	</div>
 	
+	<div class ="container">
 	<h2> Les débuts de comédien </h2>
 	<p>
 		Pierre Niney commence sa carrière au théâtre. 
@@ -41,6 +68,6 @@
 		Récemment, Pierre Niney a rejoint le casting de la saga OSS 117, auprès de Jean Dujardin dans ce troisième volet nommé OSS 117 : Alerte rouge en Afrique noire.
 		La sortie est prévue pour février 2021.
 	</p>
-
+	</div>
 </body>
 </html>
