--- a/pierre_niney/bio_perso_p.html
+++ b/pierre_niney/bio_perso_p.html
@@ -59,5 +59,10 @@
 		Ils ont ensemble deux filles. 
 	</p>
 	</div>
+
+
+	<img src = "1.jfif"
+	width="300"
+	style="margin-left : 150px;">
 </body>
 </head>
