--- a/pierre_niney/bio_pro_p.html
+++ b/pierre_niney/bio_pro_p.html
@@ -55,6 +55,9 @@
 		Il devient à seulement 25 ans le plus jeune comédien à remporter ce prix.
 		Il y donne la réplique à Guillaume Gallienne et Charlotte Le Bon. Grâce à ce rôle, il remporte aussi le prix Patrick Dewaere.
 	</p>
+
+	<img src="2.jpg"
+	width = "400">
 	
 	<h2> Un succès mérité </h2>
 	<p>
